--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress/plugin-back-to-top": "^1.5.1",
-    "@vuepress/plugin-nprogress": "^1.5.1"
+    "@vuepress/plugin-nprogress": "^1.5.1",
+    "vuepress": "^1.7.1"
   }
 }
