--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
           ARGS: "-avz --delete"
-          SOURCE: "docs/.vuepress/dist"
+          SOURCE: "docs/.vuepress/dist/"
           REMOTE_HOST: "8.135.39.65"
           REMOTE_USER: "root"
-          TARGET: "/usr/local"
+          TARGET: "/root/webapp/blog/"
