--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -35,5 +35,6 @@ jobs:
           ARGS: "-avz --delete"
           SOURCE: "docs/.vuepress/dist/"
           REMOTE_HOST: "8.135.39.65"
+          REMOTE_PORT: "28"
           REMOTE_USER: "root"
           TARGET: "/root/webapp/blog/"
