--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -32,7 +32,7 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
           SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          ARGS: "-avz --delete"
+          ARGS: "-avzr --delete"
           SOURCE: "docs/.vuepress/dist/"
           REMOTE_HOST: "8.135.39.65"
           REMOTE_USER: "root"
