--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -35,6 +35,5 @@ jobs:
           ARGS: "-avzr --delete"
           SOURCE: "docs/.vuepress/dist/"
           REMOTE_HOST: "8.135.39.65"
-          REMOTE_PORT: "28"
           REMOTE_USER: "root"
-          TARGET: "/home/webroot/dist"
+          TARGET: "/"
