--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -36,4 +36,4 @@ jobs:
           SOURCE: "dist/"
           REMOTE_HOST: "8.135.39.65"
           REMOTE_USER: "root"
-          TARGET: "/root"
+          TARGET: ""
