--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -23,12 +23,12 @@ jobs:
         env:
           CI: true
       # Deploy
-      - name: Deploy
-        uses: easingthemes/ssh-deploy@v2.0.7
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          ARGS: '-avzr --delete'
-          SOURCE: 'dist/'
-          REMOTE_HOST: '8.135.39.65'
-          REMOTE_USER: 'root'
-          TARGET: ''
+      - name: deploy file to server
+        uses: wlixcc/SFTP-Deploy-Action@v1.0
+        with:
+          username: 'root'
+          server: '8.135.39.65'
+          ssh_private_key: ${{ secrets.SERVER_SSH_KEY }}
+          local_path: './dist/*'
+          remote_path: '/root/webapp'
+          args: '-o ConnectTimeout=5'
