--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -11,11 +11,6 @@ jobs:
       # 切换分支
       - name: Checkout
         uses: actions/checkout@master
-      # 下载 git submodule
-      - uses: srt32/git-actions@v0.0.3
-        with:
-          args: git submodule update --init --recursive
-      # 使用 node:10
       - name: use Node.js 10
         uses: actions/setup-node@v1
         with:
@@ -36,4 +31,4 @@ jobs:
           SOURCE: 'dist/'
           REMOTE_HOST: '8.135.39.65'
           REMOTE_USER: 'root'
-          TARGET: ''
+          TARGET: '/root/webapp'
